fix: buttons on safari

--- a/client/src/css/page.scss
+++ b/client/src/css/page.scss
@@ -75,6 +75,7 @@ body.page {
         flex: 0;
         align-items: center;
         justify-content: center;
+        display: inline-block;
 
         background-color: vars.$primary-color;
         color: white;
